# PyPasswordGenerator

./: .gitignore  app.py  pyproject.toml
password_generator/: buttons.py  core.py  main.py  password.py
password_generator/ui/: QMainWindow.css  main.ui  resources.py  resources.qrc  ui_main.py
